fix chat box align issue, alerts not rendering on Safari

--- a/src/app/styles/Chatbot.module.css
+++ b/src/app/styles/Chatbot.module.css
@@ -81,7 +81,7 @@
 /* Chatbox styles */
 .chatbox {
     border-radius: 10px;
-    padding: 25px;
+    padding: 30px;
     margin-bottom: 10px;
     height: 50vh;
     overflow-y: auto;
@@ -108,29 +108,27 @@
 /* Messages list styles */
 .messages {
     font-family: "Poppins", sans-serif;
+    color: white;
     list-style: none;
     padding: 0;
     margin: 0;
-    color:white;
 }
 
 /* Message item styles */
 .message {
     display: flex;
     align-items: flex-start;
-    margin-bottom: 10px;
+    margin-bottom: 10px;   
 }
 
 .message .sender {
-    display: flex;
     font-weight: bold;
     margin-right: 10px;
 }
 
 .message .content {
-    display: flex;
-    word-wrap: break-word;
     text-align: left;
+    overflow-wrap: anywhere; /* Break long words if they exceed the container */
 }
 
 /* User input styles */
@@ -198,6 +196,9 @@
 /* Flexbox styles */
 .flex {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .submitFlex {
